<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/popupView"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/border"
    android:padding="10px"
    android:orientation="vertical"
    android:gravity="center"
>

   <!-- <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_margin="10dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:textAlignment="center"
                android:text="@string/deleteAppointmentTitle"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/option"/>



                <Button
                    android:id="@+id/delAllButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_weight="1"
                    android:text="@string/deleteAll"/>

                <Button
                    android:id="@+id/selectedDelButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/selectToDelete"/>



        </LinearLayout>
<!--</ScrollView>-->
</LinearLayout>