<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/updatePopupView"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/border"
    android:padding="10px"
    android:orientation="vertical"
    android:gravity="center"
>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_margin="10dp">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="15dp"
                android:textAlignment="center"
                android:text="@string/updateAppointment"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textStyle="bold" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/updateHeading"
                android:layout_marginBottom="20dp"
                android:textAlignment="center"/>


            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:gravity="center"
                android:orientation="vertical">


                <EditText
                    android:id="@+id/updateTitleEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="30dp"
                    android:ems="10"
                    android:hint="@string/titleTextView"
                    android:inputType="text"/>

                <EditText
                    android:id="@+id/updateTimeEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="30dp"
                    android:ems="10"
                    android:hint="@string/timeTextView"
                    android:inputType="time"/>


                <EditText
                    android:id="@+id/updateDetailsEditText"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_marginBottom="30dp"
                    android:ems="10"
                    android:hint="@string/detailsTextView"
                    android:inputType="textMultiLine"/>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/updateButton"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/update"
                    android:background="@color/CornflowerBlue"
                    android:layout_marginLeft="1dp"/>
            </LinearLayout>


        </LinearLayout>
</ScrollView>
</LinearLayout>