<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.apareciumlabs.brionsilva.safeplant.DonateFragment">

    <!-- TODO: Update blank fragment layout -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/helpTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/donateToday"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/TitletextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/helpTV"
            android:layout_marginTop="11dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/donatesub"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/Black" />

        <EditText
            android:id="@+id/askQuestionEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:ems="10"
            android:inputType="number"
            android:textAlignment="center"
            android:layout_below="@+id/textView9"
            android:layout_alignLeft="@+id/editText"
            android:layout_alignStart="@+id/editText" />

        <Button
            android:id="@+id/submitQuestionBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="19dp"
            android:text="@string/donate"
            android:padding="10dp"
            android:background="@color/transparentGrey"
            android:layout_below="@+id/askQuestionEditText"
            android:layout_centerHorizontal="true" />

        <TextView
            android:id="@+id/messageTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:text="@string/cardNo"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:layout_below="@+id/editText3"
            android:layout_alignRight="@+id/submitQuestionBtn"
            android:layout_alignEnd="@+id/submitQuestionBtn" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:src="@drawable/payment"
            android:layout_below="@+id/TitletextView"
            android:layout_centerHorizontal="true" />


        <EditText
            android:id="@+id/editText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/editText3"
            android:layout_alignStart="@+id/editText3"
            android:layout_below="@+id/messageTV"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:inputType="date" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/amount"
            android:layout_marginTop="12dp"
            android:layout_below="@+id/imageView5"
            android:layout_centerHorizontal="true" />

        <EditText
            android:id="@+id/editText3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:layout_below="@+id/textView8"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="7dp" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="9dp"
            android:text="@string/expiration"
            android:layout_below="@+id/editText"
            android:layout_centerHorizontal="true" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:text="@string/donateDialogTitle"
            android:textColor="@color/Black"
            android:layout_below="@+id/submitQuestionBtn"
            android:layout_centerHorizontal="true" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/donateDialogButton"
            android:padding="10dp"
            android:background="@color/transparentGrey"
            android:layout_alignParentBottom="true"
            android:layout_toLeftOf="@+id/textView11"
            android:layout_marginRight="14dp"
            android:layout_marginEnd="14dp"
            android:layout_marginBottom="12dp" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/poweredBy"
            android:layout_alignBaseline="@+id/button"
            android:layout_alignBottom="@+id/button"
            android:layout_alignRight="@+id/helpTV"
            android:layout_alignEnd="@+id/helpTV" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:src="@drawable/ideamart"
            android:layout_alignTop="@+id/button"
            android:layout_toRightOf="@+id/textView11"
            android:layout_toEndOf="@+id/textView11" />

    </RelativeLayout>
</FrameLayout>
